--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ permissions: read-all
 jobs:
   apk:
     name: Create apk
-    runs-on: pg-runner-mac
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -75,7 +75,7 @@ jobs:
 
   aab:
     name: Create appbundle
-    runs-on: pg-runner-mac
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -125,7 +125,7 @@ jobs:
 
   ios:
     name: Create ios
-    runs-on: pg-runner-mac
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
 
@@ -212,7 +212,7 @@ jobs:
 
   macos:
     name: Create macos
-    runs-on: pg-runner-mac
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
 
