--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -43,7 +43,7 @@ jobs:
         run: flutter pub get
 
       - name: Build AppImage
-        run: flutter_distributor package --platform linux --targets appimage
+        run: flutter_distributor package --platform linux --targets appimage --artifact-name picguard.appimage
 
       # Package the build.
       - name: Copy build for AppImage
@@ -84,7 +84,7 @@ jobs:
         run: flutter pub get
 
       - name: Build deb
-        run: flutter_distributor package --platform linux --targets deb
+        run: flutter_distributor package --platform linux --targets deb --artifact-name picguard.deb
 
       # Package the build.
       - name: Copy build for deb
@@ -129,7 +129,7 @@ jobs:
         run: flutter pub get
 
       - name: Build RPM
-        run: flutter_distributor package --platform linux --targets rpm
+        run: flutter_distributor package --platform linux --targets rpm --artifact-name picguard.rpm
 
       # Package the build.
       - name: Copy build for rpm
@@ -181,3 +181,44 @@ jobs:
       # Package the build.
       - name: Copy build for snap
         run: ls -la *.snap
+
+  zip:
+    name: Create zip
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install dependencies for Linux
+        run: |
+          sudo apt update
+          sudo apt install -y libgtk-3-dev libx11-dev pkg-config cmake clang ninja-build libblkid-dev liblzma-dev
+          sudo apt install -y p7zip-full p7zip-rar
+
+      - name: Install GStreamer
+        # Install libunwind-dev, see https://github.com/actions/runner-images/issues/6399#issuecomment-1285011525
+        run: |
+          sudo apt install -y libunwind-dev
+          sudo apt install -y libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          flutter-version: '3.19.6'
+
+      - name: Install flutter_distributor
+        run: dart pub global activate flutter_distributor
+
+      - name: Flutter doctor -v
+        run: flutter doctor -v
+
+      - name: Install flutter dependencies
+        run: flutter pub get
+
+      - name: Build zip
+        run: flutter_distributor package --platform linux --targets zip --artifact-name picguard.linux.zip
+
+      # Package the build.
+      - name: Copy build for zip
+        run: ls -laR
+        working-directory: dist
