--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,6 +90,7 @@ jobs:
         - appimage
         - deb
         - rpm
+        - zip
         - snap
       steps:
         - uses: actions/checkout@v4
@@ -591,7 +592,7 @@ jobs:
         run: flutter pub get
 
       - name: Build AppImage
-        run: flutter_distributor package --platform linux --targets appimage
+        run: flutter_distributor package --platform linux --targets appimage --artifact-name picguard.appimage
 
       # Package the build.
       - name: Copy build for AppImage
@@ -654,7 +655,7 @@ jobs:
         run: flutter pub get
 
       - name: Build deb
-        run: flutter_distributor package --platform linux --targets deb
+        run: flutter_distributor package --platform linux --targets deb --artifact-name picguard.deb
 
       # Package the build.
       - name: Copy build for deb
@@ -721,7 +722,7 @@ jobs:
         run: flutter pub get
 
       - name: Build RPM
-        run: flutter_distributor package --platform linux --targets rpm
+        run: flutter_distributor package --platform linux --targets rpm --artifact-name picguard.rpm
 
       # Package the build.
       - name: Copy build for rpm
@@ -742,6 +743,69 @@ jobs:
         run: |
           RELEASE="$([[ "$ENV" == "development" ]] && echo "$VERSION_SUFFIX" || echo "$VERSION")"
           gh release upload "$RELEASE" ./*.rpm
+        env:
+          ENV: ${{ github.event.inputs.env }}
+          VERSION_SUFFIX: "${{ needs.create_release.outputs.version }}+${{ needs.create_release.outputs.timestamp }}-${{ needs.create_release.outputs.sha_short }}"
+          VERSION: ${{ needs.create_release.outputs.version }}
+          GH_TOKEN: ${{ secrets.PG_RELEASE_TOKEN }}
+
+  zip:
+    name: Create zip
+    runs-on: ubuntu-latest
+    needs:
+      - create_release
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install dependencies for Linux
+        run: |
+          sudo apt update
+          sudo apt install -y libgtk-3-dev libx11-dev pkg-config cmake clang ninja-build libblkid-dev liblzma-dev
+          sudo apt install -y p7zip-full p7zip-rar
+
+      - name: Install GStreamer
+        # Install libunwind-dev, see https://github.com/actions/runner-images/issues/6399#issuecomment-1285011525
+        run: |
+          sudo apt install -y libunwind-dev
+          sudo apt install -y libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          flutter-version: '3.19.6'
+
+      - name: Install flutter_distributor
+        run: dart pub global activate flutter_distributor
+
+      - name: Flutter doctor -v
+        run: flutter doctor -v
+
+      - name: Install flutter dependencies
+        run: flutter pub get
+
+      - name: Build zip
+        run: flutter_distributor package --platform linux --targets zip --artifact-name picguard.linux.zip
+
+      # Package the build.
+      - name: Copy build for zip
+        run: |
+          ls -laR
+          cp ./**/*.linux.zip $GITHUB_WORKSPACE/
+        working-directory: dist
+
+      - name: Install gh
+        run: |
+          if ! command -v gh >/dev/null 2>&1; then
+            echo "gh not exists"
+            brew install gh
+          fi
+          gh --version
+
+      - name: Upload assets
+        run: |
+          RELEASE="$([[ "$ENV" == "development" ]] && echo "$VERSION_SUFFIX" || echo "$VERSION")"
+          gh release upload "$RELEASE" ./*.linux.zip
         env:
           ENV: ${{ github.event.inputs.env }}
           VERSION_SUFFIX: "${{ needs.create_release.outputs.version }}+${{ needs.create_release.outputs.timestamp }}-${{ needs.create_release.outputs.sha_short }}"
