--- a/windows/packaging/exe/make_config.yaml
+++ b/windows/packaging/exe/make_config.yaml
@@ -1,11 +1,14 @@
 app_id: 30DFB236-E218-4D60-8D2A-6739075167C6
-publisher: Qingdao INSCO Network Technology Co., Ltd.
+publisher_name: Qingdao INSCO Network Technology Co., Ltd.
 publisher_url: https://www.kjxbyz.com/picguard
 display_name: PicGuard
 create_desktop_icon: true
+privileges_required: admin
+# launch_at_startup: false
+# setup_icon_file:
 # See: https://jrsoftware.org/ishelp/index.php?topic=setup_defaultdirname
 # install_dir_name: "D:\\HELLO-WORLD"
 locales:
   - en
   - zh
-#script_template: inno_setup.iss
+script_template: inno_setup.iss
